--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_html
 description: A Flutter widget rendering static HTML and CSS as Flutter widgets.
 version: 2.2.1
-homepage: https://github.com/Sub6Resources/flutter_html
+homepage: https://github.com/iandis/flutter_html
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -28,7 +28,7 @@ dependencies:
   chewie_audio: '>=1.2.0 <2.0.0'
 
   # Plugins for rendering the <svg> tag.
-  flutter_svg: '>=0.22.0 <1.0.0'
+  flutter_svg: ^2.0.9
 
   # Plugin for rendering MathML
   flutter_math_fork: '>=0.4.2+1 <1.0.0'
